[FE] FIX : 모달창 overflow

--- a/frontend/src/components/home/AlarmModal.scss
+++ b/frontend/src/components/home/AlarmModal.scss
@@ -47,6 +47,7 @@
   margin: auto;
   width: 332px;
   height: 580px;
+  overflow: auto;
 }
 .modal-footer {
   height: 1px;
